<resources>
    <string-array name="language_array">
        <item>English</item>
        <item>Russian</item>
        <item>Georgian</item>
    </string-array>

    <string name="app_name">Alias</string>
    <string name="rules">rules</string>
    <string name="start_game">Start Game</string>
    <string name="max6Teams">Maximum 6 Teams</string>
    <string name="min2Teams">Minimum 2 Teams</string>
    <string name="uniqueConstraint">No Teams With Same Names</string>
    <string name="fillAllFields">Please Fill Required Fields</string>
    <string name="start">Start</string>
    <string name="classic">classic</string>
    <string name="arcade">arcade</string>
    <string name="add">add</string>
    <string name="time">Time</string>
    <string name="point">Points</string>
    <string name="start_next_round">Start Next Round</string>
    <string name="rematch">Rematch</string>
    <string name="new_game">New Game</string>
    <string name="rules_divide_by_teams">Divide by Teams</string>
    <string name="rules_second">Explain the Words to Your Teammate</string>
    <string name="rules_third">Don’t use Similarly Sounding Words as Hints</string>
    <string name="rules_fourth">Classic Mode</string>
    <string name="rules_fifth">5 Words at a Time. Click on The Word To Update Score</string>
    <string name="rules_sixth">If All 5 Words Guessed, New Words Will be Generated</string>
    <string name="rules_seventh">Arcade Mode</string>
    <string name="rules_eighth">2 Buttons and 1 Word at a Time</string>
    <string name="rules_ninth">Click on Respective Button to Increase/Decrease Score</string>
    <string name="rules_tenth">Bonus Round</string>
    <string name="rules_eleventh">If Several Teams Pass the Mark of Winning Points, Bonus Round Will be Held Among Those.</string>
    <string name="rules_twelveth">Bonus Rounds held until the winner by total points appears</string>
    <string name="rules_thirteenth">Stuck?</string>
    <string name="rules_fourteenth">If Stuck, Round can be Skipped. Points are Saved</string>
    <string name="choose_game_mode">Choose Game Mode</string>
    <string name="next">Next</string>
    <string name="ensure_message">Do you want to forfeit round?</string>
    <string name="ensure_btn_text">Forfeit Game</string>
    <string name="result_title">Result</string>
    <string name="score">Score</string>
    <string name="continue_txt">Continue</string>
</resources>
