<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rules_dialog_shape"
    tools:context=".ui.rules.RulesDialogFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/bold"
            android:text="@string/rules_divide_by_teams"
            android:textColor="@color/white_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_second"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv1"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_third"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv1"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv2" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/bold"
            android:text="@string/rules_fourth"
            android:textColor="@color/white_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv3" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_fifth"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv4"
            app:layout_constraintStart_toStartOf="@id/tv4"
            app:layout_constraintTop_toBottomOf="@id/tv4" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_sixth"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv5"
            app:layout_constraintStart_toStartOf="@id/tv4"
            app:layout_constraintTop_toBottomOf="@id/tv5" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/bold"
            android:text="@string/rules_seventh"
            android:textColor="@color/white_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv6" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_eighth"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv7"
            app:layout_constraintStart_toStartOf="@id/tv7"
            app:layout_constraintTop_toBottomOf="@id/tv7" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_ninth"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv7"
            app:layout_constraintStart_toStartOf="@id/tv7"
            app:layout_constraintTop_toBottomOf="@id/tv8" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/bold"
            android:text="@string/rules_tenth"
            android:textColor="@color/white_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv9" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_eleventh"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv10"
            app:layout_constraintStart_toStartOf="@id/tv10"
            app:layout_constraintTop_toBottomOf="@id/tv10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_twelveth"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv10"
            app:layout_constraintStart_toStartOf="@id/tv10"
            app:layout_constraintTop_toBottomOf="@id/tv11" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/bold"
            android:text="@string/rules_thirteenth"
            android:textColor="@color/white_2"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv12" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/second"
            android:text="@string/rules_fourteenth"
            android:textColor="@color/white_2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/tv13"
            app:layout_constraintStart_toStartOf="@id/tv13"
            app:layout_constraintTop_toBottomOf="@id/tv13" />

        <androidx.legacy.widget.Space
            android:layout_width="match_parent"
            app:layout_constraintTop_toBottomOf="@id/tv14"
            android:layout_height="64dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>