<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nord_dark"
    tools:context=".ui.configure.view_pager_fragments.pager_time_and_points.PagerTimeAndPointsFragment">

    <View
        android:id="@+id/drawable"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_time_and_points_scene"
        app:layout_constraintBottom_toBottomOf="@+id/guideline2"
        app:layout_constraintDimensionRatio=".8888888888"
        app:layout_constraintEnd_toStartOf="@id/guideline4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTimeTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/time"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/horizontalGuidelineTop" />

    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/timeSeekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cs_circle_progress_color="@color/dark_blue"
        app:cs_circle_stroke_width="10dp"
        app:cs_pointer_color="@color/dark_blue"
        app:cs_pointer_halo_color="@color/dark_blue"
        app:cs_pointer_halo_color_ontouch="@color/dark_blue"
        app:cs_pointer_stroke_width="20dp"
        app:cs_progress="60"
        app:layout_constraintBottom_toTopOf="@id/horizontalGuidelineForSeekBar"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTimeTitle" />

    <TextView
        android:id="@+id/timeTV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/timeSeekBar"
        app:layout_constraintEnd_toEndOf="@id/timeSeekBar"
        app:layout_constraintStart_toStartOf="@id/timeSeekBar"
        app:layout_constraintTop_toTopOf="@id/timeSeekBar" />

    <TextView
        android:id="@+id/tvPointTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bold"
        android:text="@string/point"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalGuidelineForSeekBar" />

    <me.tankery.lib.circularseekbar.CircularSeekBar
        android:id="@+id/pointSeekBar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cs_circle_progress_color="@color/dark_blue"
        app:cs_circle_stroke_width="10dp"
        app:cs_pointer_color="@color/dark_blue"
        app:cs_pointer_halo_color="@color/dark_blue"
        app:cs_pointer_halo_color_ontouch="@color/dark_blue"
        app:cs_pointer_stroke_width="20dp"
        app:cs_progress="60"

        app:layout_constraintBottom_toTopOf="@id/guidelineBottom"
        app:layout_constraintDimensionRatio="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvPointTitle" />

    <TextView
        android:id="@+id/pointTV"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/white_2"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/pointSeekBar"
        app:layout_constraintEnd_toEndOf="@id/pointSeekBar"
        app:layout_constraintStart_toStartOf="@id/pointSeekBar"
        app:layout_constraintTop_toTopOf="@id/pointSeekBar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuidelineForSeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.68" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnClassic"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:background="@drawable/game_mode_btn_shape_inversed"
        android:fontFamily="@font/bold"
        android:padding="8dp"
        android:paddingEnd="36dp"
        android:text="@string/classic"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineBottom" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnArcade"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/game_mode_btn_shape_inversed"
        android:fontFamily="@font/bold"
        android:padding="8dp"
        android:paddingEnd="72dp"
        android:text="@string/arcade"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnClassic" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".4" />


</androidx.constraintlayout.widget.ConstraintLayout>